--- a/src/app.scss
+++ b/src/app.scss
@@ -1,9 +1,10 @@
 :root {
   font-family: system-ui;
-  line-height: 1.5;
+  line-height: 1.6;
+  font-size: 1.125rem;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --bg-color: #001829;
 }
 
 *,
@@ -12,15 +13,22 @@
   box-sizing: border-box;
 }
 
+img {
+  display: block;
+}
+
 html,
 body {
   margin: 0;
+}
+
+body {
+  background-color: var(--bg-color);
+  background-image: url("/green-scatter-bg.svg");
 }
 
 #app {
   // max-width: 1320px;
   margin: 0 auto;
   min-height: 100vh;
-  background-image: url("/polygon-scatter-mint.svg");
-  background-repeat: repeat;
 }
